# stocks_market-analytics

./: .gitignore  README.md  pyproject.toml
src/analytical_pipeline/config/: settings.py
src/analytical_pipeline/consumers/: twelvedata_consumer.py
src/analytical_pipeline/producers/: producer.py  twelvedata_producer.py
src/analytical_pipeline/utils/: logger.py
tests/: test_consumer.py
