[project]
name = "analytical_pipeline"
version = "0.0.1"
description = "real-time stocks market analytical pipeline"
authors = [
    {name = "yuto82",email = "rgritsal@gmail.com"}
]
packages = [
    { include = "market_analytics", from = "src" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "websocket-client (>=1.8.0,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
